# createAIdemo

./: .gitignore  README.md  pyproject.toml  report.md
api/: crew_runner.py  server.py
knowledge/: user_preference.txt
src/createaidemo/: crew.py  export_utils.py  main.py  test.py  user_memory.json
src/createaidemo/config/: agents.yaml  tasks.yaml
src/createaidemo/tools/: __init__.py  ddg_search_tool.py  memory_tool.py
tests/: test_smoke.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  api.ts
web/src/components/: ExportDrawer.vue  ProgressPanel.vue  ReportViewer.vue
web/src/styles/: main.css
